[package]
name = "bmr"
version = "0.1.0"
authors = ["Richard do Nascimento Fagundes <richard.fagundes@instruct.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bmr"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]

[dependencies]
rayon = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"